[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/library_scene.gd" type="Script" id=1]
[ext_resource path="res://image_textures/bg_solid_color.png" type="Texture" id=2]
[ext_resource path="res://fonts/HULifeStyle_m.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://image_textures/x.png" type="Texture" id=4]
[ext_resource path="res://image_textures/ivory.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="library_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background_image" type="TextureRect" parent="."]
margin_left = -29.0
margin_top = -38.0
margin_right = 1044.0
margin_bottom = 623.0
texture = ExtResource( 2 )
expand = true

[node name="library_header" type="Label" parent="background_image"]
margin_left = 68.0
margin_top = 39.0
margin_right = 531.0
margin_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Library"
valign = 1

[node name="quit_button" type="Button" parent="."]
margin_left = 959.0
margin_top = 3.0
margin_right = 1022.0
margin_bottom = 60.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="temp_go_to_gameplay" type="Button" parent="."]
margin_left = 46.0
margin_top = 91.0
margin_right = 252.0
margin_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="play" type="Label" parent="temp_go_to_gameplay"]
margin_left = 6.0
margin_top = 1.0
margin_right = 196.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
valign = 1

[node name="download_button" type="Button" parent="."]
margin_left = 777.0
margin_top = 455.0
margin_right = 1006.0
margin_bottom = 589.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="add_song" type="Label" parent="download_button"]
margin_left = 5.0
margin_top = 6.0
margin_right = 217.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "Add"
align = 1
valign = 1

[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="temp_go_to_gameplay" to="." method="_on_temp_go_to_gameplay_pressed"]
[connection signal="pressed" from="download_button" to="." method="_on_download_button_pressed"]
